# ChangeLog for sys-devel/gcc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.709 2009/05/16 21:39:42 flameeyes Exp $

  16 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> gcc-4.4.0.ebuild:
  Keyword -x86-fbsd per bug #270098 (miscompile of the C library).

  15 May 2009; Raúl Porcel <armin76@gentoo.org> gcc-4.3.2-r4.ebuild:
  arm stable wrt #264121

  11 May 2009; Raúl Porcel <armin76@gentoo.org>
  +files/4.4.0/gcc-4.4.0-softfloat.patch, gcc-4.4.0.ebuild:
  Add softfloat patch for gcc-4.4.0, patch done by Maksim 'max_posedon'
  Melnikau <maxposedon at gmail dot com>, bug #268903

  09 May 2009; Mark Loeser <halcy0n@gentoo.org> gcc-4.2.4-r1.ebuild,
  -gcc-4.3.0.ebuild, -gcc-4.3.1.ebuild, -gcc-4.3.1-r1.ebuild,
  -gcc-4.3.2.ebuild, -gcc-4.3.2-r2.ebuild, gcc-4.3.2-r3.ebuild,
  gcc-4.3.2-r4.ebuild, gcc-4.3.3-r2.ebuild, gcc-4.4.0.ebuild:
  Remove a bunch of old versions, and fix some licenses; bug #174474

  07 May 2009; Mark Loeser <halcy0n@gentoo.org> gcc-4.4.0.ebuild,
  metadata.xml:
  Add graphite support to gcc-4.4

*gcc-4.4.0 (07 May 2009)

  07 May 2009; Mark Loeser <halcy0n@gentoo.org> +gcc-4.4.0.ebuild:
  Bump to 4.4.0; bug #267268

  03 May 2009; Mark Loeser <halcy0n@gentoo.org> -gcc-4.3.3.ebuild,
  gcc-4.3.3-r2.ebuild:
  Add DEPEND on >=glibc-2.8; bug #267650

  03 May 2009; Mark Loeser <halcy0n@gentoo.org> gcc-3.4.6-r2.ebuild,
  gcc-4.0.4.ebuild, gcc-4.1.2.ebuild, gcc-4.2.4-r1.ebuild, gcc-4.3.0.ebuild,
  gcc-4.3.1.ebuild, gcc-4.3.1-r1.ebuild, gcc-4.3.2.ebuild,
  gcc-4.3.2-r2.ebuild, gcc-4.3.2-r3.ebuild, gcc-4.3.2-r4.ebuild,
  gcc-4.3.3.ebuild, gcc-4.3.3-r2.ebuild:
  Add sys-devel/flex as a DEPEND; bug #221411

*gcc-4.3.2-r4 (26 Apr 2009)

  26 Apr 2009; Mark Loeser <halcy0n@gentoo.org> +gcc-4.3.2-r4.ebuild:
  Bump patchset to fix bug #261111 and bug #265367 for arm

  14 Apr 2009; Brent Baude <ranger@gentoo.org> gcc-4.3.2-r3.ebuild: