@@ -86,12 +86,12 @@ DIST gcc-4.3.2-piepatches-v10.1.5.tar.bz2 6026 RMD160 9dd0ec9930b272f66136458ff1
 DIST gcc-4.3.2-specs-0.9.4.tar.bz2 1521 RMD160 294e42dad478914e88db84693bb1cd4cf6ae60d5 SHA1 e2bcd3192a8e15523b11333e11b00f12730ca455 SHA256 1e616666f3802f9e0772d78d401a120fb1bfb444764f6c91cdca50c7ae2bc51f
 DIST gcc-4.3.2-uclibc-patches-1.0.tar.bz2 17849 RMD160 971e1c91265560ebf26e40acb627360eef31d04b SHA1 c2d8c28620a609dc3c6c5e44002fb2149670fd7a SHA256 6872b135638094002164fcddb9937301245d0b24e10619ffa7334b4ebf29183a
 DIST gcc-4.3.2.tar.bz2 58929447 RMD160 0ced28bd2e0d89f081cf88273b5f1530599b52fb SHA1 787b566ad4f386a9896e2d5703e6ff5e7ccaca58 SHA256 bfbf487731ad5dca37efe480a837417de071bd67e685d5c1df6a290707575165
-DIST gcc-4.3.3-patches-1.1.tar.bz2 75764 RMD160 6bf733f7c4c1cdc125ec017b765a966bffdab0af SHA1 03f8e3756aeddabad41f840cd2212d8b806237ca SHA256 c2142a06ae24644edb0aff5fc2e01fd09ab160856dcbab814718928e4443f09f
+DIST gcc-4.3.3-patches-1.2.tar.bz2 78206 RMD160 4860b3947d93f7d678ba60d6c66ac85196ef58d5 SHA1 80e0bae4da426db164a434bbbb21f1bded1084dc SHA256 7bdd062b969fab934d4aff3f1e7cdd06d60d8bddd1ab25d2fe617e41df3aa51a
 DIST gcc-4.3.3-piepatches-v10.1.5.tar.bz2 6036 RMD160 c5e44d583cfc9328fcc0c5ab4026393c28fdba3f SHA1 ff2e9fd4f238523d19806a05f84f1aa5a4c2149b SHA256 7e7a799f9066ab5948ea7ac73b0cb75c91bfa9231bf618bdc0e132e40d6d88d5
 DIST gcc-4.3.3-specs-0.9.4.tar.bz2 1515 RMD160 3a94bf49e628b1714b93f471c363bf0e4ae5d9cd SHA1 e46cd31b4f020d2c6eba748217a921d2678e64b5 SHA256 1cfade221d3873e34bb4719297f0eb811e712d7f095a85dc9e2508e53ffe1cec
 DIST gcc-4.3.3-uclibc-patches-1.1.tar.bz2 2294 RMD160 977c1733242e65c9705fe5e7c7cc92fc87d17c46 SHA1 6aa6bd21b5e7905bf39f3ff5bf3b606527cf7295 SHA256 a15737077039384932138a7c5f209e9a171ad756618a4ea078062816f028a77b
 DIST gcc-4.3.3.tar.bz2 59369954 RMD160 8c20a52633df659cabd66925d8a105a7a1479820 SHA1 e378b7a0cb0f7dbf6436f4efb5756e29a90fdc1c SHA256 309f614a3c7fee88edc4928ff17185a19533949a1642ccf776e87d86303704de
-DIST gcc-4.4.0-patches-1.0.tar.bz2 11025 RMD160 902aa65dcf284430be336fa014dff6ba65b95fae SHA1 ecb7e9880c8cbb45b7e298513cc7accb2aab7723 SHA256 a8640fc6158dffa010ca47a98535f4aa4a848aae5924dcf3f515fdcc45e2d0c2
+DIST gcc-4.4.0-patches-1.1.tar.bz2 13458 RMD160 4df76f08d810871edd78e5d9c4413e103a4a2548 SHA1 5445bf5ee80f84da556adf440f9702ca5893c6b0 SHA256 cda06bd965c155da62855abe15b886d74ab763b9593753444d8ebb155354f8e0
 DIST gcc-4.4.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 a3314543c11c23664b7c07a0e73ee53730cd7024 SHA1 fbf2a53e8ec1868bddad7ad8037adbbe9a350e7f SHA256 d483c547357dd4b6de0ad7bc44ec77330caf9ecf97af41a52e49f76af8567709
 DIST gcc-4.4.0.tar.bz2 62708198 RMD160 174989b1b6b35d0c10cfa9eee1b51948bf5c4fb3 SHA1 9215af6beb900ca1eef1d6a40c3dabe990203b25 SHA256 c5fe6f4c62ee7288765c3800ec9d21ad936bdcb5a04374cc09bd5a4232b836c9
 DIST gdc-0.24-src.tar.bz2 1012099 RMD160 f0f33cc02d88ea1174030988c2006cb90029392a SHA1 2be913fe061429c1a279e4cf882e947d34946303 SHA256 cc6a97c76c9e6db31e76ff97014d24b3d43e21f018a3c6218e3fb2a4500fc79a
@@ -100,7 +100,7 @@ EBUILD gcc-3.4.6-r2.ebuild 4564 RMD160 6d18755ff236b9f6b8389bd0c8ec5024b0b1c118 
 EBUILD gcc-4.1.2.ebuild 2843 RMD160 5d3dd9d587a63ef4d34c0a14dc7da4f657deb1f4 SHA1 edb18253ba7268f960d4fa9d9ca8308f7fb7aa18 SHA256 10f194f4477770cba4f5e6873f34f8acf22f4893515726319708c3e24369de17
 EBUILD gcc-4.2.4-r1.ebuild 5661 RMD160 f058f3886d4ca6e3db507ae610d6746f16f76f63 SHA1 2452e21f2957a0ec8ea4d1b5bb037dbdbbbcae80 SHA256 5af0817373233be5b8cd53b550fff00707d90c6de1307161c50151cc40e11b34
 EBUILD gcc-4.3.2-r4.ebuild 4882 RMD160 4dd82c9078a781f231a64a56afb75d9d29d2fa82 SHA1 a7037091a97883c9280c6a69df409d2d3201c42c SHA256 963b7c4d6f877de732de490fd724eaa413c98a73668ba434242d8561dc25361b
-EBUILD gcc-4.3.3-r2.ebuild 5123 RMD160 322764fbb5f043dd6cfd40307efed2637251807f SHA1 2ef8ced7bda45ad36984a9e9b35f481f5feb5cd2 SHA256 93a3a925bc0d6e407c12b38023af3ce9b7232a3d140150b33af57c029660dfe5
-EBUILD gcc-4.4.0.ebuild 5099 RMD160 72736a742a249f7b116ee5528d891708568adbb0 SHA1 5f21436963aadfd7737c706826ad4baaa744c691 SHA256 0af38255eac34f1282894820c3a7678b6b2629674b0fbe97ecbfae340373cffc
-MISC ChangeLog 127513 RMD160 241ac203bc634fef7ac5ad8b2dbf0097be4fe365 SHA1 5c50a3f639ae7cce6097858be0b2ea252dc28270 SHA256 94162533de567cf8b7b5ace69436f20462d55402d1024a1cbca9df4b402a363c
+EBUILD gcc-4.3.3-r2.ebuild 5123 RMD160 e4ac25e9e30840feffe1a7fd52130ff953f70686 SHA1 637df7e74db0b6849118e33eebcd604e85553cfa SHA256 2d89fc334e26c0ae4e3cc6fdcb827bef9c147a6c2f145902e5b30663efd5177f
+EBUILD gcc-4.4.0.ebuild 5097 RMD160 50dd244e2f2ab1026a18e3a8bf652443fe69eed2 SHA1 520b223a95c82e7214b464bec891677e054f9d38 SHA256 90f5731d774fc43439a62174f8f48791e29d5ae0a87313fec7ba89d3a58da079
+MISC ChangeLog 127656 RMD160 05bc4c245b98e2203e5373a2079d6dd3949f1204 SHA1 438359798f1c059428283d05ede85bb9499e928d SHA256 d1bcda5eac03c353d7f5c5f53a1a58dd0631d34585fe5fffe01100f10fa3b12b
 MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
