@@ -1,10 +1,10 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.3.3-r2.ebuild,v 1.4 2009/05/09 21:26:12 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.3.3-r2.ebuild,v 1.5 2009/05/24 23:16:31 halcy0n Exp $
 
 GENTOO_PATCH_EXCLUDE="69_all_gcc43-pr39013.patch" #262567
 
-PATCH_VER="1.1"
+PATCH_VER="1.2"
 UCLIBC_VER="1.1"
 
 ETYPE="gcc-compiler"
